--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@
 # VITE_SUPABASE_URL="https://okfixksoveqrxamiejsh.supabase.co"
 # VITE_API_URL = "http://localhost:5234"
 VITE_API_URL = "https://yerp-yeezy.yehtohoga.com"
+# VITE_API_URL = "https://yzy-erp-app-02.yeezy.com"
